<resources>
    <string name="app_name">Calculator</string>

    //basic
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="sum">+</string>
    <string name="sub">-</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="clear">AC</string>
    <string name="backspace">CE</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="percent">%</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>

    //scientific mode buttons
    <string name="x_n_button">xʸ</string>
    <string name="x_fact_button">x!</string>
    <string name="root_button">√</string>
    <string name="e_button">e</string>
    <string name="ln_button">ln</string>
    <string name="log_button">log</string>
    <string name="sin_button">sin</string>
    <string name="cos_button">cos</string>
    <string name="tan_button">tan</string>
    <string name="pi_button">π</string>
    <string name="inv_button">Inv</string>
    <string name="exp_button">EXP</string>
    <string name="deg_button">Deg</string>
    <string name="rad_button">Rad</string>

    //scientific mode actions
    <string name="x_n_action">^(</string>
    <string name="x_fact_action">!</string>
    <string name="root_action">sqrt(</string>
    <string name="ln_action">ln(</string>
    <string name="log_action">log(</string>
    <string name="sin_action">sin(</string>
    <string name="cos_action">cos(</string>
    <string name="tan_action">tan(</string>
    <string name="pi_action">pi</string>
    <string name="e_action">e</string>
    <string name="exp_action">E</string>

    //inverted mode buttons
    <string name="n_root_button">ʸ√x</string>
    <string name="asin_button">sin⁻¹</string>
    <string name="acos_button">cos⁻¹</string>
    <string name="atan_button">tan⁻¹</string>
    <string name="log_inv_button">10ˣ</string>
    <string name="ln_inv_button">eˣ</string>
    <string name="x_squared_button">x²</string>
    <string name="rnd_button">Rnd</string>

    //inverted mode actions
    <string name="x_squared_action">^(2)</string>
    <string name="ln_inv_action">e^(</string>
    <string name="asin_action">asin(</string>
    <string name="acos_action">acos(</string>
    <string name="atan_action">atan(</string>
    <string name="log_inv_action">10^(</string>
    <string name="n_root_action">^(1/</string>
</resources>
