<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ScientificFragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:rowCount="5"
    android:columnCount="3"
   >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sin"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/sin_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:id="@+id/cos"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/cos_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tan"
        android:layout_column="1"
        android:layout_row="3"
        android:text="@string/tan_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/e"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/e_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/ln_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:id="@+id/log"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/log_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x_fact"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/x_fact_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/root"
        android:layout_column="2"
        android:layout_row="3"
        android:text="@string/root_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deg_rad"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/rad_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x_n"
        android:layout_column="2"
        android:layout_row="4"
        android:text="@string/x_n_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inv"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/inv_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pi"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/pi_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:padding="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rnd"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/rnd_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:padding="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exp"
        android:layout_column="1"
        android:layout_row="4"
        android:text="@string/exp_button"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/dark_button"
        
        android:layout_columnWeight="1"
        android:textSize="18sp"
        android:padding="30dp" />
</GridLayout>